--- a/QoSExperiments/pom.xml
+++ b/QoSExperiments/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ow2.choreos</groupId>
-	<artifactId>QoSExpreriments</artifactId>
+	<artifactId>QoSExperiments</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
@@ -24,9 +24,29 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>eu.choreos</groupId>
-			<artifactId>rehearsal</artifactId>
-			<version>0.13</version>
+		    <groupId>br.usp.ime</groupId>
+		    <artifactId>travel-agency</artifactId>
+		    <version>1.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>br.usp.ime.futuremarket</groupId>
+			<artifactId>bank</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>br.usp.ime.futuremarket</groupId>
+			<artifactId>portal</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>br.usp.ime.futuremarket</groupId>
+			<artifactId>shipper</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>br.usp.ime.futuremarket</groupId>
+			<artifactId>supermarket</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
