--- a/QoSExperiments/src/main/resources/log4j.properties
+++ b/QoSExperiments/src/main/resources/log4j.properties
@@ -14,11 +14,11 @@ log4j.appender.A2.layout.ConversionPattern=[%p %d{HH:mm:ss} %C{1}] %m%n
 
 
 
-log4j.logger.reconfLogger=DEBUG, reconflogger
-log4j.additivity.reconflogger=false
+log4j.logger.expLogger=DEBUG, explogger
+log4j.additivity.explogger=false
 
-log4j.appender.reconflogger=org.apache.log4j.FileAppender
-log4j.appender.reconflogger.maxFileSize=20000KB
-log4j.appender.reconflogger.layout=org.apache.log4j.PatternLayout
-log4j.appender.reconflogger.layout.ConversionPattern=[%p %d{HH:mm:ss} %C{1}] %m%n
-log4j.appender.reconflogger.File=./reconfiguration.log
+log4j.appender.explogger=org.apache.log4j.FileAppender
+log4j.appender.explogger.maxFileSize=20000KB
+log4j.appender.explogger.layout=org.apache.log4j.PatternLayout
+log4j.appender.explogger.layout.ConversionPattern=[%p %d{HH:mm:ss} %C{1}] %m%n
+log4j.appender.explogger.File=./reconfiguration.log
